src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>blng__TaxGLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Order Products (Tax GL Treatment)</relationshipLabel>
        <relationshipName>TaxGLTreatmentOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxPercentageApplied__c</fullName>
        <label>Tax Percentage Applied</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>blng__TaxRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Tax Rule assigned to this order product.</inlineHelpText>
        <label>Tax Rule</label>
        <referenceTo>blng__TaxRule__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>TaxRuleOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxState__c</fullName>
        <label>Tax State (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStatus__c</fullName>
        <inlineHelpText>The status of the tax calculation for this order product.</inlineHelpText>
        <label>Tax Calculation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__LineTaxStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TaxStreet2__c</fullName>
        <label>Tax Street 2 (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxStreet__c</fullName>
        <label>Tax Street 1 (Override)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TaxTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Tax Treatment assigned to this order product.</inlineHelpText>
        <label>Tax Treatment</label>
        <referenceTo>blng__TaxTreatment__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>TaxTreatmentOrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxZipCode__c</fullName>
        <label>Tax Postal Code (Override)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__TerminatedBillings__c</fullName>
        <inlineHelpText>Amount that could be canceled from an order product based on termination date. Can&apos;t be more than the pending billing amount.</inlineHelpText>
        <label>Terminated Billing Amount (without tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__TotalBilling__c</fullName>
        <formula>blng__BilledAmountwithouttax__c  +  blng__BilledTax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The sum of all invoice lines and taxes for this order.</inlineHelpText>
        <label>Total Billings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__UsageFloorQuantity__c</fullName>
        <label>Usage Floor Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>SBQQ__CannotChangeBookingIndicatorOnActivation</fullName>
        <active>true</active>
        <description>Can’t edit the bookings status on an activated order product.</description>
        <errorConditionFormula>AND(SBQQ__Activated__c, ISCHANGED(SBQQ__BookingsIndicator__c))</errorConditionFormula>
        <errorDisplayField>SBQQ__BookingsIndicator__c</errorDisplayField>
        <errorMessage>Can’t edit the bookings status on an activated order product.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__RecurringChargeTypeMustHaveBillingType</fullName>
        <active>true</active>
        <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Recurring&apos;), ISPICKVAL(SBQQ__BillingType__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_frequency</fullName>
        <active>true</active>
        <description>When Charge Type is &apos;One-Time&apos;, a Billing Frequency value cannot be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingFrequency__c, &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingFrequency__c</errorDisplayField>
        <errorMessage>When Charge Type is &apos;One-Time&apos;, a Billing Frequency value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_type</fullName>
        <active>true</active>
        <description>When Charge Type is One-Time or Usage, a Billing Type cannot be selected.</description>
        <errorConditionFormula>OR(
            AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))),
            AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Usage&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time or Usage, a Billing Type value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>blng__BIllingRuleMustBeSelected</fullName>
        <active>true</active>
        <description>Billing Rule must be selected</description>
        <errorConditionFormula>AND(OR(ISNEW(), AND (ISCHANGED(SBQQ__Activated__c), SBQQ__Activated__c)), ISBLANK(blng__BillingRule__c))</errorConditionFormula>
        <errorMessage>Billing Rule must be selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>blng__RevenueRecognitionRuleMustBeSelected</fullName>
        <active>true</active>
        <description>Revenue Recognition Rule must be selected</description>
        <errorConditionFormula>AND(OR(ISNEW(), AND (ISCHANGED(SBQQ__Activated__c), SBQQ__Activated__c)), ISBLANK(blng__RevenueRecognitionRule__c))</errorConditionFormula>
        <errorMessage>Revenue Recognition Rule must be selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>blng__TaxRuleMustBeSelected</fullName>
        <active>true</active>
        <description>Tax Rule must be selected</description>
        <errorConditionFormula>AND(OR(ISNEW(), AND (ISCHANGED(SBQQ__Activated__c), SBQQ__Activated__c)), ISBLANK(blng__TaxRule__c))</errorConditionFormula>
        <errorMessage>Tax Rule must be selected</errorMessage>
    </validationRules>
</CustomObject>